--- a/content/8-posters/49.md
+++ b/content/8-posters/49.md
@@ -9,55 +9,55 @@ contributor:
   - first_name: "Julianna"
     last_name: "Ly"
     title: "Assistant Conservator of Paintings"
-    affiliation: "The Cleveland Museum of Art"
+    affiliation: "Cleveland Museum of Art"
     sort_as: "1"
   - first_name: "Chun"
     last_name: "Liu"
     title: "Scientist"
-    affiliation: "The Janssen Pharmaceutical Companies of Johnson & Johnson"
+    affiliation: "Janssen Pharmaceutical Companies of Johnson & Johnson, Titusville, New Jersey"
     sort_as: "2"
   - first_name: "Jing"
     last_name: "Qu"
     title: "Research Scientist"
-    affiliation: "University of Delaware Advanced Materials Characterization Laboratory"
+    affiliation: "University of Delaware Advanced Materials Characterization Laboratory, Newark, Delaware"
     sort_as: "3"
   - first_name: "Gerald"
     last_name: "Poirier"
     title: "Director"
-    affiliation: "University of Delaware Advanced Materials Characterization Laboratory"
+    affiliation: "University of Delaware Advanced Materials Characterization Laboratory, Newark, Delaware"
     sort_as: "4"
   - first_name: "Matthew"
     last_name: "Cushman"
     title:
-    affiliation: "Winterthur/University of Delaware Program in Art Conservation"
+    affiliation: "Winterthur / University of Delaware Program in Art Conservation, Newark, Delaware"
     sort_as: "5"
 keywords: "evolon, evolon CR, poultice, wax-resin, lining, adhesive, tissue"
-abstract: "Evolon CR, an absorbent fabric composed of polyester and polyamide microfilaments, is currently used in conservation for the purpose of reducing and removing overpaint and varnish from paintings. This study explores its use as a poulticing agent for the reduction of wax from wax-resin lining treatments. Experiments involving different methods of using the tissue, as well as analyses of the tissue after use employing various analytical methods indicate that it is most effective when used as a single sheet of solvent-wetted tissue. While the tissue can be used more than once, its ability to poultice wax-resin significantly decreases after its first use. Finally, the most important role in influencing the efficacy of poulticing is the solvent choice."
+abstract: "Evolon CR, an absorbent fabric composed of polyester and polyamide microfilaments, is currently used in conservation for the purpose of reducing and removing overpaint and varnish from paintings. This study explores its use as a poulticing agent for the reduction of wax from wax-resin lining treatments. Experiments involving different methods of using the tissue, as well as analyses of the tissue after use employing various analytical methods, indicate that it is most effective when used as a single sheet of solvent-wetted tissue. While the tissue can be used more than once, its ability to poultice wax-resin significantly decreases after first use. Finally, the most important role in influencing the efficacy of poulticing is the solvent choice."
 ---
 
 ## Introduction
 
-Despite the successful use of Evolon CR (a nonwoven tissue made of a polyester and polyamide blend[^1]) in removing overpaint and varnish ({% cite 'Ribits 2017' %}), little research has been done on its ability to poultice wax-resin mixtures. Confronted with two wax-resin-lined paintings that required relining, the authors sought a method that would achieve a homogeneous surface topography and remove residual wax-resin mixtures on the verso. The successful reduction of wax-resin mixtures ([fig. 49.1a](#fig-49-1-a)) prompted further research into the efficacy of this method and into the constituent materials poulticed into and onto the Evolon CR tissue. The goals of this study were to better understand the chemical and physical properties of Evolon CR and to evaluate the tissue’s efficacy at reducing wax-resin mixtures in an effort to improve and expand its practical use in conservation.
+Despite the successful use of Evolon CR (a nonwoven tissue made of a polyester and polyamide blend)[^1] in removing overpaint and varnish ({% cite 'Ribits 2017' %}), little research has been done on its ability to poultice wax-resin mixtures. Confronted with two wax-resin lined paintings that required relining, the authors sought a method that would achieve a homogeneous surface topography and remove residual wax-resin mixtures on the verso. The successful reduction of wax-resin mixtures ([fig. 49.1a](#fig-49-1-a)) prompted further research into the efficacy of this method and into the constituent materials poulticed into and onto the Evolon CR tissue. The goals of this study were to better understand the chemical and physical properties of Evolon CR and to evaluate the tissue’s efficacy at reducing wax-resin mixtures in an effort to improve and expand its practical use in conservation.
 
 ## Experimental Design
 
-Fragments of twentieth-century study collection paintings, previously wax lined by students with a 2:1 microcrystalline wax: Piccolyte resin, were used for this study. Following the removal of the old lining with heat, the adhesive mixture on the verso of the canvases was reduced using the following procedure (unless otherwise noted): Evolon CR squares measuring 2 inches (all weighing 0.18 g ±0.001 g) were placed onto the verso of the painting and then wetted with 1 mL of petroleum benzine, delivered by Eppendorf 1000 uL pipette. They were then covered with Mylar and left for varying lengths of dwell time ([figs. 49.1b](#fig-49-1-b), [49.1c](#fig-49-1-c)).
+Fragments of twentieth-century paintings, previously wax-lined by students using a 2:1 microcrystalline wax to Piccolyte resin, were used for this study. Following the removal of the old lining with heat, the adhesive mixture on the verso of the canvases was reduced using the following procedure (unless otherwise noted): Evolon CR squares measuring 2 inches (each weighing 0.18 g ± 0.001 g) were placed onto the verso of the painting and then wetted with 1 mL of petroleum benzine, delivered by Eppendorf 1000 uL pipette. They were then covered with Mylar and left for varying lengths of dwell time before being removed ([figs. 49.1b](#fig-49-1-b), [49.1c](#fig-49-1-c)).
 
-{% figuregroup '3' 'fig-49-1-a, fig-49-1-b, fig-49-1-c' '(a) Initial test areas with Evolon CR tissue and solvent on the verso of a painting following wax lining reversal. (b) Applying 1 mL of solvent to Evolon CR tissue. (c) Removal of Evolon CR after prescribed dwell time. Julianna Ly' %}
+{% figuregroup '3' 'fig-49-1-a, fig-49-1-b, fig-49-1-c' '(a) Initial test areas with Evolon CR tissue and solvent on the verso of a painting following wax-lining reversal. (b) Applying 1 mL of solvent to Evolon CR tissue. &#40;c) Removal of Evolon CR after prescribed dwell time. Images: Julianna Ly' %}
 
 Four experiments were conducted to evaluate solvent dwell time on the surface, the potential to reuse the tissue, different application methods, and the solvent delivered with Evolon CR.
 
-All tissues were manipulated with gloves to prevent transfer of oils or dirt from hands in the event this would impact weight gain or pyrolysis gas chromatography–mass spectrometry (Py-GCMS) analysis, and all were allowed to off-gas overnight.
+All tissues were manipulated with gloves to prevent transfer of oils or dirt from hands in the event this would impact weight gain or pyrolysis–gas chromatography–mass spectrometry (Py-GCMS) analysis, and all were allowed to off-gas overnight.
 
-Quantitative analyses included calculating the weight and porosity changes between unused and used tissues. The weight of the tissue was measured before and after each use for all four experiments on a scale accurate to 0.0001g. Porosity change analyses were conducted using Brunauer-Emmett-Teller (BET) theory. Qualitative tests included scanning electron microscopy energy dispersive electron spectroscopy (SEM-EDS) with back scattered electron (BSE) imaging, and analysis of poulticed organic materials with Py-GCMS. All experiments and analyses were conducted in 2019 at Winterthur Museum Scientific Research and Analytical Laboratory (SRAL) and the University of Delaware Advanced Materials Characterization Laboratory (UDAMCL).
+Quantitative analyses included calculating the weight and porosity changes between unused and used tissues. The weight of the tissue was measured before and after each use for all four experiments on a scale accurate to 0.0001g. Porosity change analyses were conducted using Brunauer-Emmett-Teller (BET) theory. Qualitative tests included scanning electron microscopy–energy dispersive X-ray spectroscopy (SEM-EDS) with back-scattered electron (BSE) imaging, and analysis of poulticed organic materials with Py-GCMS. All experiments and analyses were conducted in 2019 at Winterthur Museum Scientific Research and Analytical Laboratory (SRAL) and the University of Delaware Advanced Materials Characterization Laboratory (UDAMCL).
 
 ## Dwell Time
 
-Experiment 1, Dwell Time, assessed the efficacy of Evolon CR left on the surface and under Mylar for 1, 5,[^2] and 15 minutes. Time points were selected to explore practical and extreme scenarios.
+Experiment 1, Dwell Time, assessed the efficacy of Evolon CR left on the surface and under Mylar for one, five,[^2] and fifteen minutes. Time points were selected to explore practical and extreme scenarios.
 
-## Single- vs. Double-Layer Application
+## Single- versus Double-Layer Application
 
-Experiment 2, Single- vs. Double-Layer Application, assessed the difference between applying a single square of Evolon CR versus a two-layer system (a single wetted square under a dry square covered with Mylar). This method was investigated to determine whether layering a dry tissue over a solvent-soaked Evolon CR tissue could increase the poulticing ability of the material. Both the Single-Layer and Double-Layer experiments were run in triplicate with a five-minute dwell time.
+Experiment 2, Single- versus Double-Layer Application, assessed the difference between applying a single square of Evolon CR versus a two-layer system (a single wetted square under a dry square covered with Mylar). This method was investigated to determine whether layering a dry tissue over a solvent-soaked Evolon CR tissue could increase the poulticing ability of the material. Both the Single-Layer and Double-Layer experiments were run in triplicate with a five-minute dwell time.
 
 ## Iterative Use
 
@@ -71,7 +71,7 @@ Experiment 4, Solvent Studies, assessed the effect of using different ratios of 
 
 ### SEM-EDS
 
-SEM-EDS was used to analyze the Iterative Use experiments to visualize morphology changes within the tissue structure after repeated uses. Samples were examined using a Zeiss EVO MA15 SEM with LaB6 source at an accelerating voltage of 20 kV for the electron beam. Each of the runs were imaged at 25X, 50X, 137X, and 302X. SEM-EDS was conducted by Dr. Judy Rudolph, a volunteer scientist at SRAL.
+SEM-EDS was used to analyze the Iterative Use experiments to visualize morphology changes within the tissue structure after repeated uses. Samples were examined using a Zeiss EVO MA15 SEM with LaB6 source at an accelerating voltage of 20 kV for the electron beam. Each of the runs was imaged at 25×, 50×, 137×, and 302×. SEM-EDS was conducted by Dr. Judy Rudolph, a volunteer conservation scientist at SRAL.
 
 ### BET
 
@@ -79,7 +79,7 @@ Porosity measurements of the tissue were conducted for the Iterative Use experim
 
 ### Py-GCMS
 
-Py-GCMS was used to analyze the Solvent Studies experiment to characterize low-molecular-weight solvent-extractable materials poulticed from the surface. Samples were analyzed using a Frontier Lab Multi-Shot Pyrolyzer (EGA/PY-3030D), a double-shot pyrolysis system interfaced to an Agilent 7820A gas chromatograph equipped with a 5975 mass selective detector (MSD). GC-MS analysis was conducted by Dr. Chris Petersen, a volunteer scientist at SRAL.
+Py-GCMS was used to analyze the Solvent Studies experiment to characterize low-molecular-weight solvent-extractable materials poulticed from the surface. Samples were analyzed using a Frontier Lab Multi-Shot Pyrolyzer (EGA/PY-3030D), a double-shot pyrolysis system interfaced to an Agilent 7820A gas chromatograph equipped with a 5975 mass selective detector (MSD). GC-MS analysis was conducted by Dr. Chris Petersen, a volunteer conservation scientist and affiliated associate professor at SRAL.
 
 ## Results and Discussion
 
@@ -91,39 +91,39 @@ Differences in the amount of material poulticed nearly doubles when the tissue i
 
 {% figure 'fig-49-2' %}
 
-## Single- vs. Double-Layer Application
+## Single- versus Double-Layer Application
 
-The use of a two-layer application proved less effective at poulticing material into the tissue compared to using a single sheet of Evolon CR [table 49.1](#table-49-1). Wetted single-layer tissues consistently poulticed more material compared to both wetted tissues only and the combined wet and dry tissues from the Double Layer experiment. A possible explanation is that the dry tissue wicks solvent out of the wet tissue, reducing the amount of solvent delivered to the wax-resin mixture.
+The use of a two-layer application proved less effective at poulticing material into the tissue compared to using a single sheet of Evolon CR ([table 49.1](#table-49-1)). Wetted single-layer tissues consistently poulticed more material compared to both wetted tissues only and the combined wet and dry tissues from the Double Layer experiment. A possible explanation is that the dry tissue wicks solvent out of the wet tissue, reducing the amount of solvent delivered to the wax-resin mixture.
 
 {% figure 'table-49-1' %}
 
 ## Iterative Use
 
-In addition to assessing the efficacy of wax-resin poulticing through weight gain, this series also used SEM-EDS and BET to gather information regarding physical changes. Each use of the Evolon CR tissue resulted in increased material sorption, albeit with decreased amounts with each iteration ([fig. 49.3](#fig-49-3)). This trend can be explained using a similar rationale as the decreased weight gain when using excessively long dwell times: as the tissue approaches saturation, its poulticing capacity decreases.
+In addition to assessing the efficacy of wax-resin poulticing through weight gain, this series also used SEM-EDS and BET to gather information regarding physical changes. Each use of the Evolon CR tissue resulted in increased material sorption, albeit with decreased amounts for each iteration ([fig. 49.3](#fig-49-3)). This trend can be explained using a similar rationale as the decreased weight gain when using excessively long dwell times: as the tissue approaches saturation, its poulticing capacity decreases.
 
 {% figure 'fig-49-3' %}
 
-SEM images ([figs. 49.4a](#fig-49-4-a), [b](#fig-49-4-b), [c](#fig-49-4-c), and [d](#fig-49-4-d)) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
+SEM images ([fig. 49.4](#fig-49-4)) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
 
-{% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' 'SEM BSE images of unused tissue: (a) control, (b) after iteration 1, (c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137X by Dr. Judy Rudolph, volunteer conservation scientist, Scientific Research and Analysis lab, Winterthur Museum, Garden, and Library.) Images: Judy Rudolph' %}
+{% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' 'SEM BSE images of unused tissue: (a) control, (b) after iteration 1, &#40;c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137× by Dr. Judy Rudolph, volunteer conservation scientist, SRAL, Winterthur Museum.) Images: Judy Rudolph' %}
 
-BET analysis yielded a surprising result ([fig. 49.5](#fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 <sup>2</sup>/g (unused control) to 0.4315 <sup>2</sup>/g (after single use). Contrary to the weight gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
+BET analysis yielded a surprising result ([fig. 49.5](#fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 <sup>2</sup>/g (unused control) to 0.4315 <sup>2</sup>/g (after single use). Contrary to the weight-gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
 
 {% figure 'fig-49-5' %}
 
-While this publication was in preparation, further analysis of the BET data revealed an anomaly. After further discussion with external scientific colleagues, our preliminary data suggests that BET might not be the ideal instrument for analyzing porosity in Evolon CR due to the relatively low porosity of the fibrous tissue compared with materials BET is typically used to analyze. Further research is needed to develop a quantitative method for measuring porosity changes in Evolon CR before and after use.
+While this publication was in preparation, further analysis of the BET data revealed an anomaly. After further discussion with external scientific colleagues, our preliminary data suggest that BET might not be the ideal instrument for analyzing porosity in Evolon CR due to the relatively low porosity of the fibrous tissue compared with materials BET is typically used to analyze. Further research is needed to develop a quantitative method for measuring porosity changes in Evolon CR before and after use.
 
 ## Solvent Studies
 
 The 1:9 mixture of acetone and petroleum benzine gave the largest weight increase, followed by neat petroleum benzine ([fig. 49.6a](#fig-49-6-a)). These results demonstrate a clear relationship between the choice of solvent and amount of poulticed material. The 1:9 mixture likely performed best due to acetone’s ability to solubilize resinous components in the wax-resin mixture. As expected, neat acetone resulted in negligible weight gain given its chemical incompatibility with nonpolar, aliphatic compounds. Importantly, this latter result also suggests that the chemical groups making up the Evolon CR (the polyamide and polyester fibers) have minimal effects in poulticing wax resin. The efficacy of poulticing appears to come primarily from solvent choice. Py-GCMS analysis ([fig. 49.6b](#fig-49-6-b)) of the poulticed material showed the characteristic Gaussian distribution of hydrocarbon peaks from the wax component. As expected, the wax-based hydrocarbon peaks increased in intensity as the ratio of petroleum benzine to acetone increased.
 
-{% figuregroup '2' 'fig-49-6-a, fig-49-6-b' '(a) Weight increases (in grams) for each tissue exposed to the solvents or mixtures tested. (b) Py‑GCMS analysis of the three solvents: solvent 1 is 100% acetone, solvent 2 is 1:1 acetone and petroleum benzine, and solvent 3 is 1:9 acetone and petroleum benzine. (Py-GCMS analysis conducted by Dr. W. Chris Petersen, Volunteer Conservation Scientist and Affiliated Associate Professor, Scientific Research and Analysis lab, Winterthur Museum, Garden and Library.) Images: a: Julianna Ly and Tracy Liu; b: Chris Petersen, Tracy Liu' %}
+{% figuregroup '2' 'fig-49-6-a, fig-49-6-b' '(a) Weight increases (in grams) for each tissue exposed to the solvents or mixtures tested. (b) Py‑GCMS analysis of the three solvents: solvent 1 is 100% acetone, solvent 2 is 1:1 acetone and petroleum benzine, and solvent 3 is 1:9 acetone and petroleum benzine. (Py-GCMS analysis conducted by Dr. Chris Petersen, volunteer conservation scientist and affiliated associate professor, SRAL, Winterthur Museum.) Images: (a) Julianna Ly and Tracy Liu; (b) Chris Petersen, Tracy Liu' %}
 
 In summary, the results from all experiments indicate that Evolon CR is an effective material for reducing wax resin; however, the tissue alone never resulted in complete removal of the adhesive.
 
 ## Evolon CR in Practice
 
-Much still remains to be understood about practical uses of Evolon CR, yet results from these experiments indicate that, under our testing conditions, it was less effective to use two layers compared to a single sheet of solvent-wetted tissue. Additionally, while Evolon CR can be used more than once, its ability to poultice wax-resin significantly decreases after its first use. Finally, our results indicate solvent choice plays an important role in poulticing, and that this role, at least for the removal of wax-resin, is stronger than that resulting from the chemical composition of the Evolon CR fibers. Our studies did not use controlled loading of Evolon CR, a recently developed parameter of application where the tissue is loaded with only a fraction of its maximum solvent capacity instead of full saturation ({% cite 'Tauber et al. 2019' %}).
+Much still remains to be understood about practical uses of Evolon CR, yet results from these experiments indicate that, under our testing conditions, it was less effective to use two layers compared to a single sheet of solvent-wetted tissue. Additionally, while Evolon CR can be used more than once, its ability to poultice wax resin significantly decreases after its first use. Finally, our results indicate solvent choice plays an important role in poulticing, and that this role, at least for the removal of wax resin, is stronger than that resulting from the chemical composition of the Evolon CR fibers. Our studies did not use controlled loading of Evolon CR, a recently developed parameter of application where the tissue is loaded with only a fraction of its maximum solvent capacity instead of full saturation ({% cite 'Tauber et al. 2019' %}).
 
 ## Future Directions
 
@@ -139,6 +139,6 @@ To better understand whether solvents play a role in increasing the porous netwo
 
 [^1]: See [https://evolon.freudenberg-pm.com/evolon_technology/technology](about:blank).
 
-[^2]: Data for the five-minute time point is the average of the triplicate run from the Single-Layer experiment in the Single- vs. Double-Layer Application portion of the study. Note that the data for the one-minute and fifteen-minute time points are single runs (not an average).
+[^2]: Data for the five-minute time point are the average of the triplicate run from the Single-Layer experiment in the Single- versus Double-Layer Application portion of the study. Note that the data for the one-minute and fifteen-minute time points are single runs (not an average).
 
-[^3]: Data for neat petroleum benzine solvent is the average of the triplicate run from the Single-Layer experiment in the Single- vs. Double-Layer Application portion of the study. Note that the data for the neat acetone, 1:9 acetone: petroleum benzine, and 1:1 acetone–petroleum benzine solvents are single runs (not an average of a triplicate run).
+[^3]: Data for neat petroleum benzine solvent are the average of the triplicate run from the Single-Layer experiment in the Single- versus Double-Layer Application portion of the study. Note that the data for the neat acetone, 1:9 acetone to petroleum benzine, and 1:1 acetone to petroleum benzine solvents are single runs (not an average of a triplicate run).
